--- a/introdemo/package.json
+++ b/introdemo/package.json
@@ -7,12 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "server": "json-server -p3001 --watch json-server-project/db.json"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.9",
-    "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
