--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "introdemo",
+  "name": "phonebook",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,24 +8,24 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "json-server -p3001 --watch json-server-project/db.json"
+    "server": "json-server -p3001 --watch db.json" 
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@eslint/js": "^9.17.0",
+    "@types/react": "^18.3.17",
+    "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.15.0",
+    "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.12.0",
-    "vite": "^6.0.1"
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.13.0",
+    "json-server": "^1.0.0-beta.3",
+    "vite": "^6.0.3"
   }
 }
